<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.bh.bhandroidapp.ActivitySettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/setting_guide_text"
            android:textSize="@dimen/setting_server_ip_text_size"
            android:text="@string/server_ip"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="text"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_server_ip"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/setting_id_text_size"
            android:textColor="@color/setting_guide_text"
            android:text="@string/wanted_mail_id"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_mail_id"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/setting_guide_text"
            android:text="\@"
            android:textSize="@dimen/setting_id_text_size"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_mail_host"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button

            android:text="@string/confirm"
            android:onClick="onClickBtnConfirmSettings"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/cancel"
            android:onClick="onClickBtnCancelSettings"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
